@@ -20,9 +20,9 @@ package org.sherman.benchmark.java;
  */
 
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
@@ -43,6 +43,8 @@ import org.openjdk.jmh.annotations.Warmup;
 import org.openjdk.jmh.infra.Blackhole;
 import sun.misc.Unsafe;
 
+import static java.lang.foreign.ValueLayout.JAVA_LONG;
+
 @Fork(2)
 @Warmup(iterations = 5, time = 1, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 1, timeUnit = TimeUnit.SECONDS)
@@ -57,9 +59,9 @@ public class ForeignMemoryBenchmark {
     private final Unsafe unsafe = JavaInternals.getUnsafe();
     private final long unsafeAddress = unsafe.allocateMemory(SIZE * 8);
 
-    private final MemorySegment memorySegment = MemorySegment.allocateNative(SIZE * 8, SegmentScope.global());
+    private final MemorySegment memorySegment = Arena.global().allocate(SIZE * 8);
     private final long foreignMemoryAddress = memorySegment.address();
-    private final MemoryLayout layout = MemoryLayout.sequenceLayout(SIZE, MemoryLayout.valueLayout(long.class, ByteOrder.nativeOrder()));
+    private final MemoryLayout layout = MemoryLayout.sequenceLayout(SIZE, JAVA_LONG.withOrder(ByteOrder.nativeOrder()));
     private final VarHandle varHandle = layout.varHandle(MemoryLayout.PathElement.sequenceElement());
     private final MethodHandle methodHandle = varHandle.toMethodHandle(VarHandle.AccessMode.SET);
 
