@@ -5,10 +5,9 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import com.google.common.io.Files;
 import java.io.File;
 import java.io.IOException;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
-import java.lang.invoke.VarHandle;
 import java.nio.channels.FileChannel;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
@@ -66,7 +65,7 @@ public class OffHeapReadPrimitiveBenchmark {
         Files.write(data, file);
         this.file = new MappedFile(file.getAbsolutePath(), MappedFile.MAP_RO);
         var fc = FileChannel.open(file.toPath(), StandardOpenOption.READ);
-        this.memorySegment = fc.map(FileChannel.MapMode.READ_ONLY, 0, file.length(), SegmentScope.global());
+        this.memorySegment = fc.map(FileChannel.MapMode.READ_ONLY, 0, file.length(), Arena.global());
         this.base = this.file.getAddr();
     }
 
