@@ -1,17 +1,18 @@
 package org.sherman.interview.java;
 
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.ValueLayout;
-import java.nio.ByteBuffer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ValueLayout;
+import java.nio.ByteBuffer;
 
 public class MemoryApp {
     private static final Logger logger = LoggerFactory.getLogger(MemoryApp.class);
 
     public static void main(String[] args) {
-        MemorySegment segment = MemorySegment.allocateNative(1024 * 1024, SegmentScope.global());
+        MemorySegment segment = Arena.global().allocate(1024 * 1024);
         ByteBuffer buf = segment.asByteBuffer();
         buf.put((byte) 1);
 
