@@ -1,16 +1,18 @@
 package org.sherman.interview.java.cache;
 
 import com.google.common.base.Preconditions;
-import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.SequenceLayout;
-import java.lang.invoke.VarHandle;
-import java.nio.ByteOrder;
-import java.util.function.Function;
 import org.apache.commons.math3.util.Pair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SequenceLayout;
+import java.lang.invoke.VarHandle;
+import java.util.function.Function;
+
+import static java.lang.foreign.ValueLayout.JAVA_LONG;
 
 public class HashTableImpl implements HashTable<Long, Long> {
     private static final Logger logger = LoggerFactory.getLogger(HashTableImpl.class);
@@ -38,7 +40,7 @@ public class HashTableImpl implements HashTable<Long, Long> {
 
         size = (int) Utils.nextPowerOfTwo(size);
         long memorySize = size * keySize + size * valueSize;
-        this.cacheMemory = MemorySegment.allocateNative(memorySize, SegmentScope.global());
+        this.cacheMemory = Arena.global().allocate(memorySize);
         base = cacheMemory.address();
 
         Preconditions.checkArgument(memorySize >= keySize + valueSize, "Not enough cache memory for store at least one element!");
@@ -46,8 +48,8 @@ public class HashTableImpl implements HashTable<Long, Long> {
         maxSize = size;
 
         MemoryLayout entryLayout = MemoryLayout.structLayout(
-            MemoryLayout.valueLayout(long.class, ByteOrder.BIG_ENDIAN).withName(KEY_ID),
-            MemoryLayout.valueLayout(long.class, ByteOrder.BIG_ENDIAN).withName(VALUE_ID)
+            JAVA_LONG.withName(KEY_ID),
+            JAVA_LONG.withName(VALUE_ID)
         );
 
         SequenceLayout hashMapLayout = MemoryLayout.sequenceLayout(maxSize, entryLayout);
